--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "plusser/yii2-crud": "*"
+        "plusser/yii2-crud": "*",
+        "plusser/yii2-file-manager": "*",
+        "kartik-v/yii2-widget-switchinput": "@dev",
+        "2amigos/yii2-date-time-picker-widget": "*",
+        "2amigos/yii2-tinymce-widget": "*"
     },
     "autoload": {
         "psr-4": {
